--- a/Translations/UltraPunishments_Dutch.lang
+++ b/Translations/UltraPunishments_Dutch.lang
@@ -1,14 +1,14 @@
 OVERVIEW: Overzicht
-REPORT: Aangeven
+REPORT: Rapporteren
 SERVER: Server
 PLAYERS: Spelers
 REPORTS: Reports
-SETTINGS: instellingen
+SETTINGS: Instellingen
 TEMPLATE: Sjabloon
 PERMANENT: Permanent
-DURATION: Looptijd
+DURATION: Lengte
 REASON: Reden
-TEMPLATES: sjablonen
+TEMPLATES: Sjablonen
 PUNISH: Straffen
 WARNINGS: Waarschuwingen
 PUNISHMENTS: Straffen
@@ -26,7 +26,7 @@ GUI_OVERVIEW_SETTINGS_ACTION: Klik om Instellingen weer te geven
 GUI_OVERVIEW_TEMPLATES_ACTION: Klik om sjablonen weer te geven
 GUI_OVERVIEW_TEMPLATES_BANTEMPLATES: Ban Sjablonen
 GUI_OVERVIEW_TEMPLATES_MUTETEMPLATES: Dempen Sjablonen
-TYPE_IN_REASON: Voer een reden in
+TYPE_IN_REASON: Typ een reden in
 TYPE_IN_MESSAGE: Typ een bericht in
 SET_A_REASON: Klik om de reden in te stellen
 SET_A_DURATION: Klik om de duur in te stellen
@@ -55,4 +55,4 @@ GUI_PLAYERVIEW_REPORTS_ACTIVEREPORTS_NONE: Speler heeft geen actieve rapporten
 GUI_PLAYERVIEW_EXCLUDE_TITLE: Uitsluiten van straffen
 GUI_PLAYERVIEW_EXCLUDE_ACTION: Klik om %1 straffen voor deze speler
 GUI_PLAYERVIEW_EXCLUDE_EXPLANATION: Deze speler kan door niemand worden gestraft
-MESSAGE_CREATED_REPORT: Bedankt voor het melden **%1**
+MESSAGE_CREATED_REPORT: Bedankt voor het melden, **%1**
